# NNandelbrot

./: .gitignore  README.md  main.py  notes.norg  pyproject.toml
configs/: default.yaml
src/: constants.py  dataset.py  generate.py  model.py  trainer.py
