[project]
name = "NNandelbrot"
version = "0.9"
description = "Training a neural network to construct the Mandelbrot set."
authors = [
    {name = "Pierrot LC", email = "pstmrtem@outlook.com"},
]
dependencies = [
    "torch>=2.0.1",
    "numpy>=1.25.2",
    "wandb>=0.15.10",
    "hydra-core>=1.3.2",
    "tqdm>=4.66.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

