[project]
name = "NNandelbrot"
version = "0.9"
description = "Training a neural network to construct the Mandelbrot set."
authors = [
    {name = "Pierrot LC", email = "pstmrtem@outlook.com"},
]
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.25.2",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "tqdm>=4.66.1",
    "wandb>=0.15.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

